[package]
name = "enutt"
version = "0.1.0"
authors = ["dejano"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "app"
path = "bin/main.rs"
#
#[lib]
#path = "src/lib.rs"

[dependencies]
futures = "0.3.8"
tokio = { version = "0.2.24", features = ["full"] }
# udp based protocol
quinn = { version = "0.6.1", features = ["tls-rustls"] }
# needed by quinn
rustls = { version = "0.17", features = ["quic", "dangerous_configuration"] }
rcgen = "0.8.9"
webpki = { version = "0.21" }
# serialize
bincode = "1.3.1"
byte = "0.2.4"
serde = { version = "1.0.118", features = ["derive"] }
# utilities
bytes = "0.6.0"
derive_more = "0.99.11"
thiserror = "1.0.22"
config = "0.10.1"
derive-getters = "0.2.0"
parking_lot = "0.11.1"
uuid = { version = "0.8.1", features = ["v4", "serde"] }
rand = "0.7.3"

#tracing
tracing = "0.1.22"
tracing-futures = "0.2.4"
tracing-subscriber = "0.2.15"

[dev-dependencies]
# Enable test-utilities in dev mode only. This is mostly for tests.
tokio = { version = "0.2.24", features = ["test-util"] }